added most of api and new yaml definetions
