# users/models/__init__.py
@@ -1,6 +1,6 @@
-from .questionnaire import Questionnaire
+from .questionnaire import QuestionnaireTemplate, Question, UserResponse
 from .user_details import UserDetails
 from .user_preferences import UserPreferences
 from .user_preferences_features import UserPreferencesFeatures
 
-__all__ = ["Questionnaire", "UserDetails", "UserPreferences", "UserPreferencesFeatures"]
+__all__ = ["QuestionnaireTemplate", "Question", "UserResponse", "UserDetails", "UserPreferences", "UserPreferencesFeatures"]
